fixed mysql icon

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ _________________________________________________________ -->
 
                         <div class="col-sm-2 col-md-1  col-xs-3">
                             <div class="technology">
-                                <img class="img-responsive" src="images/icons/MySQL.png" title="MySQL" data-placement="bottom" data-toggle="tooltip" alt="MySQL">
+                                <img class="img-responsive" src="images/icons/mysql.png" title="MySQL" data-placement="bottom" data-toggle="tooltip" alt="MySQL">
                             </div>
                         </div>
 
@@ -887,7 +887,7 @@ _________________________________________________________ -->
     <script src="js/waypoints.min.js"></script>
 
     <!-- maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQI4TL5Dt3rNCNMT6Z4vcFK2JOzQL3r5s"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
     <!-- to use it on your site, generate your own API key for Google Maps and paste it above -->
     <script src="js/gmaps.js"></script>
 
