--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ _________________________________________________________ -->
                                     <a href="#" class="external facebook" data-animate-hover="pulse" data-animate="fadeInUp">
                                         <i class="fa fa-facebook"></i>
                                     </a>
-                                    <a href="www.linkedin.com/in/dustin-p-schroeder" class="external linkedin" data-animate-hover="pulse" data-animate="fadeInUp">
+                                    <a href="http://www.linkedin.com/in/dustin-p-schroeder" class="external linkedin" data-animate-hover="pulse" data-animate="fadeInUp">
                                         <i class="fa fa-linkedin"></i>
                                     </a>
                                     <a href="https://github.com/amalfushi" class="external github" data-animate-hover="pulse" data-animate="fadeInUp">
