added intro image

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ _________________________________________________________ -->
 
                                 <p>I found myself drawn to programming more and more, so I took the time to teach myself the
                                     basics of computer science via the
-                                    <strong>University of Helsinki's: MOOC- Java</strong>. Absolutely stricken with what was learned,
+                                    <strong>University of Helsinki's: MOOC- Java</strong>. Absolutely enamored with what I had learned,
                                     I took the plunge and enrolled at
                                     <strong>Coding Dojo: Seattle</strong>. Coding Dojo offers a bootcamp of contemporary technologies
                                     designed to create self-sufficient full-stack developers. Dojo instructors push students
