removed un-needed css files and swaped around some sections.  removed it icon

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@ _________________________________________________________ -->
                 <div class="container">
                     <div class="row">
                         <div class="carousel-caption">
-                            <div data-animate="fadeInDown" class="logo">
+                            <!-- <div data-animate="fadeInDown" class="logo">
                                 <img src="images/logo-big.png" alt="logo" width="130">
-                            </div>
+                            </div> -->
                             <h1 data-animate="fadeInDown">Dustin P. Schroeder</h1>
-                            <h2 data-animate="slideInUp">Full-Stack Developer</h2>
+                            <h2 data-animate="slideInUp">Software Engineer | Full-Stack Developer</h2>
                         </div>
                     </div>
                 </div>
@@ -230,6 +230,126 @@ _________________________________________________________ -->
         <!-- /#about -->
 
         <!-- *** ABOUT END *** -->
+        <!-- *** TECHNOLGIES ***
+_________________________________________________________ -->
+        <div class="section text-gray" id="technologies">
+            <div class="container">
+                <div class="col-md-12">
+
+
+                    <div class="row">
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/ajax.png" title="Ajax" data-placement="bottom" data-toggle="tooltip" alt="Ajax">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/angular.png" title="Angular.js" data-placement="bottom" data-toggle="tooltip"
+                                    alt="Angular.js">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/asp_net_icon.png" title="ASP.NET" data-placement="bottom" data-toggle="tooltip"
+                                    alt="ASP.NET">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/c_sharp_icon.png" title="C#" data-placement="bottom" data-toggle="tooltip"
+                                    alt="C#">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/css.png" title="CSS" data-placement="bottom" data-toggle="tooltip" alt="CSS">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/django_gray.png" title="Django" data-placement="bottom" data-toggle="tooltip"
+                                    alt="Django">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/express.png" title="Express.js" data-placement="bottom" data-toggle="tooltip"
+                                    alt="Express.js">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/flask.png" title="Flask" data-placement="bottom" data-toggle="tooltip" alt="flask">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/git.png" title="Git" data-placement="bottom" data-toggle="tooltip" alt="Git">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/html.png" title="HTML5" data-placement="bottom" data-toggle="tooltip" alt="HTML5">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/jquery.png" title="jQuery" data-placement="bottom" data-toggle="tooltip" alt="jQuery">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/js.png" title="JavaScript" data-placement="bottom" data-toggle="tooltip" alt="JavaScript">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/mongo.png" title="MongoDB" data-placement="bottom" data-toggle="tooltip" alt="MongoDB">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/mysql.png" title="MySQL" data-placement="bottom" data-toggle="tooltip" alt="MySQL">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/nodejs.png" title="Node.js" data-placement="bottom" data-toggle="tooltip" alt="Node.js">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2 col-md-1  col-xs-3">
+                            <div class="technology">
+                                <img class="img-responsive" src="images/icons/python.png" title="Python" data-placement="bottom" data-toggle="tooltip" alt="Python">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+
+
+                </div>
+                <!-- /.12 -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.section -->
+
+        <!-- *** TECHNOLOGIES END *** -->
 
         <!-- services bit (removed) -->
 
@@ -619,133 +739,6 @@ _________________________________________________________ -->
 
         <!-- *** REFERENCES END *** -->
 
-        <!-- *** TECHNOLGIES ***
-_________________________________________________________ -->
-        <!-- ********************************************************************* change to technolgies -->
-        <div class="section text-gray" id="technologies">
-            <div class="container">
-                <div class="col-md-12">
-
-
-                    <div class="row">
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/ajax.png" title="Ajax" data-placement="bottom" data-toggle="tooltip" alt="Ajax">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/angular.png" title="Angular.js" data-placement="bottom" data-toggle="tooltip"
-                                    alt="Angular.js">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/asp_net_icon.png" title="ASP.NET" data-placement="bottom" data-toggle="tooltip"
-                                    alt="ASP.NET">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/c_sharp_icon.png" title="C#" data-placement="bottom" data-toggle="tooltip"
-                                    alt="C#">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/css.png" title="CSS" data-placement="bottom" data-toggle="tooltip" alt="CSS">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/django_gray.png" title="Django" data-placement="bottom" data-toggle="tooltip"
-                                    alt="Django">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/express.png" title="Express.js" data-placement="bottom" data-toggle="tooltip"
-                                    alt="Express.js">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/flask.png" title="Flask" data-placement="bottom" data-toggle="tooltip" alt="flask">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/git.png" title="Git" data-placement="bottom" data-toggle="tooltip" alt="Git">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/html.png" title="HTML5" data-placement="bottom" data-toggle="tooltip" alt="HTML5">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/jquery.png" title="jQuery" data-placement="bottom" data-toggle="tooltip"
-                                    alt="jQuery">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/js.png" title="JavaScript" data-placement="bottom" data-toggle="tooltip"
-                                    alt="JavaScript">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/mongo.png" title="MongoDB" data-placement="bottom" data-toggle="tooltip"
-                                    alt="MongoDB">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/mysql.png" title="MySQL" data-placement="bottom" data-toggle="tooltip" alt="MySQL">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/nodejs.png" title="Node.js" data-placement="bottom" data-toggle="tooltip"
-                                    alt="Node.js">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-md-1  col-xs-3">
-                            <div class="technology">
-                                <img class="img-responsive" src="images/icons/python.png" title="Python" data-placement="bottom" data-toggle="tooltip"
-                                    alt="Python">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row -->
-
-
-                </div>
-                <!-- /.12 -->
-            </div>
-            <!-- /.container -->
-        </div>
-        <!-- /.section -->
-
-        <!-- *** TECHNOLOGIES END *** -->
-
         <!-- *** CONTACT ***
 _________________________________________________________ -->
 
@@ -761,7 +754,7 @@ _________________________________________________________ -->
                         <div class="col-md-8 col-md-offset-4">
                             <div class="col-md-6">
                                 <p class="social">
-                                    <a href="#" class="external facebook" data-animate-hover="pulse" data-animate="fadeInUp">
+                                    <a href="https://www.facebook.com/amalfushi" class="external facebook" data-animate-hover="pulse" data-animate="fadeInUp">
                                         <i class="fa fa-facebook"></i>
                                     </a>
                                     <a href="http://www.linkedin.com/in/dustin-p-schroeder" class="external linkedin" data-animate-hover="pulse" data-animate="fadeInUp">
