--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
     <!-- Theme stylesheet -->
     <link href="css/style.blue.css" rel="stylesheet" id="theme-stylesheet">
 
-    <!-- Custom stylesheet - for your changes -->
-    <link href="css/custom.css" rel="stylesheet">
-
     <!-- owl carousel css -->
 
     <link href="css/owl.carousel.css" rel="stylesheet">
@@ -742,7 +739,7 @@ _________________________________________________________ -->
         <!-- *** CONTACT ***
 _________________________________________________________ -->
 
-        <div class="section contact" id="contact" data-animate="bounceIn">
+        <div class="section contact" id="contact">
             <div class="container">
                 <div class="col-md-12">
 
