Added Uno project, fiddled with button css

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ _________________________________________________________ -->
                             <a href="#" data-filter="webdesign">Webdesign</a>
                         </li>
                         <li>
-                            <a href="#" data-filter="seo">SEO</a>
+                            <a href="#" data-filter="games">Games</a>
                         </li>
                         <li>
                             <a href="#" data-filter="marketing">Marketing</a>
@@ -450,35 +450,34 @@ _________________________________________________________ -->
 
                     <div id="references-masonry" data-animate="fadeInUp">
 
-                        <div class="reference-item" data-category="webdesign">
+                        <div class="reference-item" data-category="games">
                             <div class="reference">
                                 <a href="#">
-                                    <img src="images/portfolio-1.jpg" class="img-responsive" alt="" />
+                                    <img src="images/Projects/C-Sharp-Uno.jpg" class="img-responsive" alt="" />
 
                                     <div class="overlay">
-                                        <h3 class="reference-title">Project name</h3>
-                                        <p>Short project description goes here...</p>
+                                        <h3 class="reference-title">C# Uno</h3>
+                                        <p>A Terminal-based version of Uno</p>
                                     </div>
                                 </a>
 
-                                <div class="sr-only reference-description" data-images="images/main-slider1.jpg,images/main-slider2.jpg,images/main-slider3.jpg">
+                                <div class="sr-only reference-description" data-images="images/Projects/C-Sharp-Uno-1.jpg,images/Projects/C-Sharp-Uno-2.jpg,images/Projects/C-Sharp-Uno-3.jpg">
 
-                                    <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from
-                                        long why cold. If must snug by upon sang loud left. As me do preference entreaties
-                                        compliment motionless ye literature. Day behaviour explained law remainder. Produce
-                                        can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
+                                    <p>As part of an afternoon Hackathon, I worked with two other teammates to put together a 
+                                        C# Version of Uno. The program runs entirely in terminal and we experimented with various
+                                        colors in the command line to make the program easier to read.
+                                    </p>
 
-                                    <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending
-                                        objection happiness something the. Off nay impossible dispatched partiality unaffected.
-                                        Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she
-                                        distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by.
-                                        Sex scale sir style truth ought.</p>
+                                    <p>We faced a number of challenges in working through the logic of running the game, but found
+                                        ourselves with a successful interpretation of Uno. Interpreting user input and passing cards
+                                        between methods and classes held us up for a bit. In further development, it would be great
+                                        to allow for multiple players, more robust logic on opponents' turns, and making the game
+                                        more visually appealing.
+                                    </p>
 
                                     <p class="buttons">
-                                        <a class="btn btn-primary" href="javascript:void(0);">
-                                            <i class="fa fa-globe"></i> Visit website</a>
-                                        <a class="btn btn-primary" href="javascript:void(0);">
-                                            <i class="fa fa-download"></i> Download case study</a>
+                                        <a class="btn btn-primary" href="https://github.com/amalfushi/C-Sharp-Uno">
+                                            <i class="fa fa-github"></i> Github</a>
                                     </p>
                                 </div>
                             </div>
