Added Activity Center.  Removed unnecessary images

--- a/index.html
+++ b/index.html
@@ -508,12 +508,6 @@ _________________________________________________________ -->
                                         low based on an ideal count.
                                     </p>
 
-                                    <p>Unfortunately, I didn't have time to complete the app before leaving the company for
-                                        Coding Dojo but it was an excellent exercise in my path to being a developer. My
-                                        intent was to add automatic order generation for the company's vendors. UI improvements
-                                        and making the app not specific to the company were also desired.
-                                    </p>
-
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/ALNInventory">
                                             <i class="fa fa-github"></i> GitHub</a>
@@ -545,6 +539,40 @@ _________________________________________________________ -->
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/WormGame">
+                                            <i class="fa fa-github"></i> GitHub</a>
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="reference-item" data-category="webdesign">
+                            <div class="reference">
+                                <a href="#">
+                                    <img src="images/Projects/ActivityCenter.jpg" class="img-responsive" alt="" />
+
+                                    <div class="overlay">
+                                        <h3 class="reference-title">Activity Center</h3>
+                                        <p>A simple community event app.</p>
+                                    </div>
+                                </a>
+
+                                <div class="sr-only reference-description" data-images="images/Projects/ActivityCenter1.jpg,images/Projects/ActivityCenter2.jpg,images/Projects/ActivityCenter3.jpg,images/Projects/ActivityCenter4.jpg">
+
+                                    <p>An app designed to be a simple community event page. Users are allowed to quickly see
+                                        upcoming events that they can attend. Each event can be viewed to show the description
+                                        and other attendees. Keeping track of the start time and end time allows the app
+                                        to determin events with conflicting times with the users current RSVPs. This exercise
+                                        in relational mapping, database queries, and user accounts. Possible expansions could
+                                        include social media integration, event invites, notifications, or private events.
+                                    </p>
+                                    <p>
+                                        Using: C#/.NET, Entity Framework, MySQL, Twitter Bootstrap, AWS, GIT
+                                    </p>
+
+                                    <p class="buttons">
+                                        <a class="btn btn-primary" href="http://34.216.124.96/">
+                                            <i class="fa fa-globe"></i> Live Demo</a>
+                                        <a class="btn btn-primary" href="https://github.com/amalfushi/ActivityCenter">
                                             <i class="fa fa-github"></i> GitHub</a>
                                     </p>
                                 </div>
