added Using section to all projects

--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@ _________________________________________________________ -->
                                         include private messages, friends lists, and more robust user privileges (eg: only
                                         system admins can make forum admins).
                                     </p>
+                                    <p>Using: <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript, Git</i></p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/SharpSeaUsers">
@@ -513,6 +514,7 @@ _________________________________________________________ -->
                                         it would be great to allow for multiple players, more robust logic on opponents'
                                         turns, and making the game more visually appealing.
                                     </p>
+                                    <p>Using: <i>C#, ASP.NET, Entity Framework</si></p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/C-Sharp-Uno">
@@ -546,6 +548,7 @@ _________________________________________________________ -->
                                         to update quantities simply and quickly. The UI also highlights which supplies are
                                         low based on an ideal count.
                                     </p>
+                                    <p>Using: <i>Java, Apache POI, Microsoft Excel</i></p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/ALNInventory">
@@ -575,6 +578,7 @@ _________________________________________________________ -->
                                         'full' apps that I had put together and was fundamental to my education in software
                                         development
                                     </p>
+                                    <p>Using: <i>Java</i></p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/WormGame">
@@ -605,7 +609,7 @@ _________________________________________________________ -->
                                         include social media integration, event invites, notifications, or private events.
                                     </p>
                                     <p>
-                                        Using: C#/.NET, Entity Framework, MySQL, Twitter Bootstrap, AWS, GIT
+                                        Using: <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript, AWS, GIT</i>
                                     </p>
 
                                     <p class="buttons">
