fixed typo in Activity Center description

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ _________________________________________________________ -->
                                     <p>An app designed to be a simple community event page. Users are allowed to quickly see
                                         upcoming events that they can attend. Each event can be viewed to show the description
                                         and other attendees. Keeping track of the start time and end time allows the app
-                                        to determin events with conflicting times with the users current RSVPs. This exercise
+                                        to determine events with conflicting times with the users current RSVPs. This exercise
                                         in relational mapping, database queries, and user accounts. Possible expansions could
                                         include social media integration, event invites, notifications, or private events.
                                     </p>
