--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ _________________________________________________________ -->
 
                         <div class="row">
 
-                            <div class="col-sm-6 text-left" data-animate="fadeInUp">
+                            <div class=".col-md-6 .col-md-offset-3 text-left" data-animate="fadeInUp">
 
                                 <p>Originally from Central Washington, I attended the
                                     <strong>University of Washington</strong> in pursuit of a BFA in Photography. My work often reflected
@@ -151,7 +151,7 @@ _________________________________________________________ -->
 
                             </div>
 
-                            <div class="col-sm-6" data-animate="fadeInUp">
+                            <!-- <div class="col-sm-6" data-animate="fadeInUp">
 
                                 <div class="skill-item">
                                     <div class="progress-title">
@@ -213,7 +213,7 @@ _________________________________________________________ -->
                                     </div>
                                 </div>
 
-                            </div>
+                            </div> -->
                         </div>
 
                     </div>
