Added Mars Rover Project

--- a/index.html
+++ b/index.html
@@ -613,9 +613,41 @@ _________________________________________________________ -->
                                     </p>
 
                                     <p class="buttons">
-                                        <a class="btn btn-primary" href="http://34.216.124.96/">
-                                            <i class="fa fa-globe"></i> Live Demo</a>
+                                        <!-- <a class="btn btn-primary" href="http://34.216.124.96/">
+                                            <i class="fa fa-globe"></i> Live Demo</a> -->
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/ActivityCenter">
+                                            <i class="fa fa-github"></i> GitHub</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reference-item" data-category="webdesign">
+                            <div class="reference">
+                                <a href="#">
+                                    <img src="images/Projects/MarsRover.jpg" class="img-responsive" alt="" />
+
+                                    <div class="overlay">
+                                        <h3 class="reference-title">Mars Rover</h3>
+                                        <p>A rover controlling app</p>
+                                    </div>
+                                </a>
+
+                                <div class="sr-only reference-description" data-images="images/Projects/MarsRover1.jpg,images/Projects/MarsRover2.jpg,images/Projects/MarsRover3.jpg,images/Projects/MarsRover4.jpg">
+
+                                    <p>This project was my entry to the Google code tech challenge found <a href="https://code.google.com/archive/p/marsrovertechchallenge/">here</a>.
+                                        The goal is to design an app to deploy rovers on curiously rectangular plateaus on Mars. Input is restricted to simple text stings which
+                                        introduced a number of challenges with validating input and processing commands. I thought this app would make a neat single page application
+                                        of sorts, so I used Angular 5. That helped me easily validate the user input and create an interesting method to display the data. Further
+                                        developments could include more game-like objects like obstacles, collisions, and displaying the rovers' routes as they move.
+                                    </p>
+                                    <p>
+                                        Using: <i>Angular 5, Node.js, Express.js, HTML5, CSS, Javascript, AWS, GIT</i>
+                                    </p>
+
+                                    <p class="buttons">
+                                        <a class="btn btn-primary" href="http://54.187.117.199/">
+                                            <i class="fa fa-globe"></i> Live Demo</a>
+                                        <a class="btn btn-primary" href="https://github.com/amalfushi/MarsRover">
                                             <i class="fa fa-github"></i> GitHub</a>
                                     </p>
                                 </div>
