fixed Mars Rover having 4 images instead of 3

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ _________________________________________________________ -->
                                     </div>
                                 </a>
 
-                                <div class="sr-only reference-description" data-images="images/Projects/MarsRover1.jpg,images/Projects/MarsRover2.jpg,images/Projects/MarsRover3.jpg,images/Projects/MarsRover4.jpg">
+                                <div class="sr-only reference-description" data-images="images/Projects/MarsRover1.jpg,images/Projects/MarsRover2.jpg,images/Projects/MarsRover3.jpg">
 
                                     <p>This project was my entry to the Google code tech challenge found <a href="https://code.google.com/archive/p/marsrovertechchallenge/">here</a>.
                                         The goal is to design an app to deploy rovers on curiously rectangular plateaus on Mars. Input is restricted to simple text stings which
